--- a/app/src/main/res/menu/activity_menu.xml
+++ b/app/src/main/res/menu/activity_menu.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+
+    <item android:title="Delete"
+        android:id="@+id/delete"
+        android:onClick="deleteCourse"
+        app:showAsAction="ifRoom"/>
+
+
+
     <item android:title="Add"
         android:id="@+id/add"
         android:onClick="addCourse"
